--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,25 @@
 psycopg2-binary
 flask
-flasgger
-numpy
+jsonrpcserver
 requests
 pytest
+beautifulsoup4
+lxml
+pydantic
+tree-sitter
+tree-sitter-python
+tree-sitter-javascript
+tree-sitter-typescript
+watchdog
+pygments
+python-lsp-server
+asyncio-mqtt
+sentence-transformers
+aiohttp
+redis
+numpy
+scikit-learn
+prometheus-client
+asyncpg
+uvloop
+orjson
