--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,30 @@
 version: '3.8'
 
 services:
-  app:
+  localcontextmcp:
     build: .
     ports:
-      - "5000:5000"
+      - "8080:8080"
     environment:
       - PGHOST=db
       - PGPORT=5432
       - PGDATABASE=mcp_memory
       - PGUSER=postgres
       - PGPASSWORD=postgres
-      - LMSTUDIO_API_BASE=http://host.docker.internal:1234/v1
+      - LMSTUDIO_API_BASE=http://lms:1234/v1
       - LMSTUDIO_EMBEDDING_MODEL=qwen2.5-coder-0.5B-instruct
+      - SMITHERY_API_KEY=${SMITHERY_API_KEY}
+      - DOCKER_CONTAINER=true
     depends_on:
       - db
+      - lms
     networks:
       - mcp-network
     restart: unless-stopped
+    volumes:
+      - /Users/m3/AI/LocalContextMCP:/projects/bot-env
+    stdin_open: true
+    tty: true
 
   db:
     image: postgres:15
@@ -27,9 +34,17 @@ services:
       - POSTGRES_PASSWORD=postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
     ports:
       - "5432:5432"
+    networks:
+      - mcp-network
+    restart: unless-stopped
+
+  lms:
+    image: node:20-alpine # Placeholder, replace with actual LM Studio image if available
+    command: ["sh", "-c", "npx -y lms server start --host 0.0.0.0 --port 1234"]
+    ports:
+      - "1234:1234"
     networks:
       - mcp-network
     restart: unless-stopped
